syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.kabylin.andrey.grpc.sync";
option java_outer_classname = "SyncProto";
option objc_class_prefix = "SP";

package sync;

service Sync {
    rpc Sync (SyncGrpcRequest) returns (SyncGrpcResponse);
}

message SyncGrpcRequest {
    repeated WordGrpcRequest words = 1;
}

message WordGrpcRequest {
    int64 id = 1;
    int32 scoreDelta = 2;
}

message SyncGrpcResponse {
    repeated WordCategoryGrpcResponse categories = 1;
    repeated WordGrpcResponse words = 2;
}

message WordCategoryGrpcResponse {
    int64 id = 1;
    string name = 2;
}

message WordGrpcResponse {
    int64 id = 1;
    int64 categoryId = 2;
    string name = 3;
    string translations = 4;
    string pronounce = 5;
    repeated DefinitionGrpcResponse definitions = 6;
    int64 score = 7;
}

message DefinitionGrpcResponse {
    string title = 1;
    string desc = 2;
    string example = 3;
    string synonyms = 4;
}
